added VUE Tasks

--- a/JavaScript-Assignments/vehicle-todo.html
+++ b/JavaScript-Assignments/vehicle-todo.html
@@ -110,7 +110,7 @@
       font-weight: bold;
     }
   
-    @media (max-width: 768px) {
+    /* @media (max-width: 768px) {
       form.formdetails {
         flex-direction: column;
         align-items: flex-start;
@@ -120,7 +120,7 @@
       form button {
         width: 100%;
       }
-    }
+    } */
   </style>
 </head>
 <body>
